# OpenGeode-GeosciencesIO

./: CMakeLists.txt  COPYLEFT  README.md  azure-pipelines.yml  upgrade-guide.md
.github/workflows/: CD.yml  CI.yml  CI_schedule.yml  deploy.yml  prepare_pr.yml  schedule.yml  test.yml  test_pr.yml
bindings/python/: CMakeLists.txt  __init__.py  mesh.py  mesh_geosciencesio.py  model.py  model_geosciencesio.py  requirements.in  requirements.txt  setup.py
bindings/python/src/: CMakeLists.txt
bindings/python/src/geosciences/: CMakeLists.txt  geosciences.cpp
bindings/python/src/mesh/: CMakeLists.txt  mesh.cpp
bindings/python/src/mesh_geosciencesio/: CMakeLists.txt  mesh_geosciencesio.cpp
bindings/python/src/model/: CMakeLists.txt  model.cpp
bindings/python/src/model_geosciencesio/: CMakeLists.txt  model_geosciencesio.cpp
bindings/python/tests/: CMakeLists.txt
bindings/python/tests/geosciences/: CMakeLists.txt  test-py-lso.py  test-py-ml.py  test-py-ts.py
bindings/python/tests/mesh/: CMakeLists.txt  test-py-ts.py
bindings/python/tests/model/: CMakeLists.txt  test-py-geos.py  test-py-lso.py  test-py-ml.py
cmake/: OpenGeode-GeosciencesIOConfig.cmake.in  OpenGeodeGeosciencesIOConfig.cmake.in  OpenGeode_GeosciencesIOConfig.cmake.in
docs/: supported_file_formats.dox
include/geode/geosciences/detail/: common.h  gocad_common.h  ml_input.h  ts_input.h
include/geode/geosciences/private/: gocad_common.h  lso_input.h  lso_output.h  ml_input.h  ml_output.h  ml_output_brep.h  ml_output_impl.h  ml_output_structural_model.h  pl_output.h  ts_input.h  utils.h  (+5 more)
include/geode/geosciences_io/: project.hpp
src/geode/: CMakeLists.txt
src/geode/geosciences/: CMakeLists.txt  common.cpp  gocad_common.cpp  lso_input.cpp  lso_output.cpp  ml_input.cpp  ml_output.cpp  ml_output_brep.cpp  ml_output_structural_model.cpp  pl_output.cpp  ts_input.cpp  utils.cpp  well_dat_input.cpp  well_dev_input.cpp  well_txt_input.cpp  wl_input.cpp
src/geode/geosciences_io/: CMakeLists.txt
tests/: CMakeLists.txt  tests_config.h.in
tests/data/: 2triangles.ts  EclipseGridTest.grdecl  Fault_without_crs.ts  README.md  bmsh_342.og_tso3d  closed_lines.pl  normal_lines.pl  points.vs  remeshed_yom-faults.og_brep  sgrid_tsurf.ts  surf2d.ts  surf2d_multi.ts  test.lso  test.vo  test.wl  test__ascii@@  test_skua_horizons_stack.xml  test_well.dev  test_well.txt  ts-2props.ts  vri.lso
tests/geosciences/: CMakeLists.txt  test-lso.cpp  test-ml.cpp  test-pl.cpp  test-shp.cpp  test-ts.cpp  test-vo.cpp  test-well-dat.cpp  test-well-dev.cpp  test-well-txt.cpp  test-wl.cpp
tests/geosciences/data/: dfn_meshed.ts
tests/mesh/: CMakeLists.txt  test-dem.cpp  test-geotiff.cpp  test-grdecl.cpp  test-pl.cpp  test-polytiff.cpp  test-solid-fem-output.cpp  test-ts.cpp  test-vo.cpp  test-vs.cpp  test-well-dat.cpp  test-well-dev.cpp  test-well-txt.cpp  test-wl.cpp
tests/model/: CMakeLists.txt  test-brep-fem-output.cpp  test-geos.cpp  test-lso.cpp  test-ml.cpp  test-shp.cpp  test-skua-horizons-stack.cpp  test-skua-su-stack.cpp  test-strati-lso-input.cpp
(+172 files in other folders)
